<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/content_description_image_logo"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:maxLines="1">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/age"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_age"
            android:inputType="number" />

        <EditText
            android:id="@+id/childPhone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/parentPhone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_parent_phone_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/action_login" />

        <!--<Button-->
        <!--android:id="@+id/SignUpButton"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_width="240dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="SignUp" />-->

    </LinearLayout>
</ScrollView>